# python.2

./: exporter.py  jobs.csv  main.py  pyproject.toml  scrapper.py
Scrapping and Class inherit/: main.py  pyproject.toml
python_challenge/: alba.com Scrapping.py.py  python_basic.py  python_basic2.py
python_challenge/Last Challenge of python/: export_csv.py  main.py  scrapper.py
python_challenge/Last Challenge of python/static/: python.csv  react.csv
python_challenge/Last Challenge of python/templates/: job_list.html  search_input.html
python_challenge/scrapping with flask bs4 requests/: main.py  pyproject.toml
python_challenge/scrapping with flask bs4 requests/templates/: error.html  home.html  read.html
templates/: potato.html  report.html
