[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "darkgreenprettypatterns"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^1.1"
python = "^3.7"
html-snippet = "^0.2.0"
requests = "^2.23"
beautifulsoup4 = "^4.9"
[tool.poetry.dev-dependencies]
